--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,25 @@
                     </div>
 
                 </nav>
+                <div id="modal" class="modal">
+                    <div class="modal-content">
+                        <span id="closeModalBtn" class="close-btn">&times;</span>
+                        <h2>Task Details</h2>
+                        <form id="taskForm">
+                            <label for="taskName">Task Name</label>
+                            <input type="text" id="taskName" name="taskName" required>
+
+                            <label for="taskDescription">Task Description</label>
+                            <textarea name="taskDescription" id="taskDescription" required></textarea>
+
+                            <label for="taskDueDate">Task Due Date</label>
+                            <input type="datetime-local" name="taskDueDate" id="taskDueDate" required>
+
+
+                            <button type="submit">Submit</button>
+                        </form>
+                    </div>
+                </div>
             </div>
             <div class="main-content"></div>
 
