--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,8 @@
                                     </ul>
                                     <button id="addNewProjectBtn">+ Add New Project</button>
                                     <form id="newProjectForm" class="hidden">
-                                        <input type="text" id="newProjectName" placeholder="Enter Project Name" required/>
+                                        <input type="text" id="newProjectName" placeholder="Enter Project Name"
+                                            required />
                                         <button type="submit">Add</button>
                                     </form>
                                 </div>
@@ -115,7 +116,13 @@
                     </div>
                 </div>
             </div>
-            <div class="main-content"></div>
+            <div class="main-content">
+                <h1>Tasks</h1>
+                <div class="flex-container">
+                    </div>
+                    
+                </div>
+            </div>
 
         </div>
 
